CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(RGBDSLAM_9_8)

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(PCL REQUIRED)
FIND_PACKAGE(G2O REQUIRED)

ADD_SUBDIRECTORY(5Point)
ADD_SUBDIRECTORY(Registration)
ADD_SUBDIRECTORY(ImageSimilarity)
ADD_SUBDIRECTORY(KeyFrame)
ADD_SUBDIRECTORY(GraphEnd)
ADD_SUBDIRECTORY(LocationLib)
ADD_SUBDIRECTORY(Scan)
ADD_SUBDIRECTORY(Test)
ADD_SUBDIRECTORY(Location)

