SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(
	${PCL_INCLUDE_DIRS}
	${OpenCV_INCLUDE_DIRS}
	${PROJECT_SOURCE_DIR}/CommonHeader
	${PROJECT_SOURCE_DIR}/Registration
	${G2O_INCLUDE_DIR}
	${G2O_INCLUDE_DIR}/EXTERNAL/csparse
	${G2O_INCLUDE_DIR}/EXTERNAL/ceres
	${G2O_INCLUDE_DIR}/EXTERNAL/freeglut
	${PROJECT_SOURCE_DIR}/SiftGPU
	${PROJECT_SOURCE_DIR}/5Point
	${PROJECT_SOURCE_DIR}/5Point/include
	${PROJECT_SOURCE_DIR}/ImageSimilarity
	${PROJECT_SOURCE_DIR}/KeyFrame)
	
AUX_SOURCE_DIRECTORY(. Graph_SRC)
ADD_LIBRARY(GraphEnd STATIC ${Graph_SRC})
SET_TARGET_PROPERTIES(GraphEnd PROPERTIES OUTPUT_NAME "GraphEnd")