SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(
	${PCL_INCLUDE_DIRS}
	${OpenCV_INCLUDE_DIRS}
	${PROJECT_SOURCE_DIR}/CommonHeader
	${PROJECT_SOURCE_DIR}/ImageSimilarity)
	
AUX_SOURCE_DIRECTORY(. Key_SRC)
ADD_LIBRARY(KeyFrame STATIC ${Key_SRC})
SET_TARGET_PROPERTIES(KeyFrame PROPERTIES OUTPUT_NAME "KeyFrame")