SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(
	${OpenCV_INCLUDE_DIRS}
	${PCL_INCLUDE_DIRS}
	${PROJECT_SOURCE_DIR}/CommonHeader
	${PROJECT_SOURCE_DIR}/Registration
	${PROJECT_SOURCE_DIR}/KeyFrame
	${PROJECT_SOURCE_DIR}/GraphEnd
	${PROJECT_SOURCE_DIR}/SiftFeat
	${PROJECT_SOURCE_DIR}/SiftGPU
	${PROJECT_SOURCE_DIR}/5Point
	${PROJECT_SOURCE_DIR}/5Point/include
	${PROJECT_SOURCE_DIR}/ImageSimilarity)
	

	
AUX_SOURCE_DIRECTORY(. Loc_SRC)
ADD_LIBRARY(LocationLib STATIC ${Loc_SRC})
SET_TARGET_PROPERTIES(LocationLib PROPERTIES OUTPUT_NAME "LocationLib")