SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib) 

INCLUDE_DIRECTORIES(
	${PCL_INCLUDE_DIRS}
	${OpenCV_INCLUDE_DIRS}
	${PROJECT_SOURCE_DIR}/CommonHeader
	${PROJECT_SOURCE_DIR}/SiftGPU
	${PROJECT_SOURCE_DIR}/5Point
	${PROJECT_SOURCE_DIR}/5Point/include
	${PROJECT_SOURCE_DIR}/KeyFrame)
	
AUX_SOURCE_DIRECTORY(. REG_SRC)
ADD_LIBRARY(Registration STATIC ${REG_SRC})
SET_TARGET_PROPERTIES(Registration PROPERTIES OUTPUT_NAME "Registration")
